opam-version: "2.0"
maintainer: "jeremie@dimino.org"
bug-reports: "https://github.com/ocaml/graphics/issues"
dev-repo: "git+https://github.com/ocaml/graphics.git"
authors: ["Jérémie Dimino <jeremie@dimino.org>"]
homepage: "https://github.com/ocaml/graphics"
license: "LGPL-2.1 with OCaml linking exception"
doc: "https://ocaml.github.io/graphics/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "conf-libX11"
  "ocaml" {>= "4.09.0~~"}
  "dune" {>= "1.6"}
]
synopsis: "The OCaml graphics library"
description: """
The graphics library provides a set of portable drawing
primitives. Drawing takes place in a separate window that is created
when Graphics.open_graph is called.

This library used to be distributed with OCaml up to OCaml 4.08.
"""
